fixed spacing for hero section

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ html {
 
 body {
     background-color: var(--main);
+    width: 100%;
 }
 
 :root {
@@ -60,7 +61,6 @@ a {
     list-style-type: none;
     padding: 10px 20px;
 }
-
 
 .nav-links li:hover {
     cursor: pointer;
@@ -114,19 +114,29 @@ nav::before {
 .hero {
     background: linear-gradient(180deg, var(--main) 0%, var(--secondary) 100%);
     z-index: -1;
-    padding: 100px;
+    padding: 0;
     display: flex;
 }
 
 .col {
     width: 50%;
-    padding: 30px;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .row {
     display: flex;
     margin-top: 20px;
     justify-content: left;
+}
+
+.avatar {
+    display: block;
+    margin: auto;
+    width: 30vw;
+    border-radius: 50%;
 }
 
 .button {
@@ -159,6 +169,15 @@ nav::before {
     background: linear-gradient(180deg, var(--secondary) 0%, var(--main) 100%);
 }
 
+.hero h1,
+.hero h2,
+.hero h3,
+.hero h4,
+.hero p,
+.hero .row {
+    padding: 0 30px;
+}
+
 h4 {
     font-weight: 100;
     font-size: 2em;
@@ -167,6 +186,7 @@ h4 {
 p {
     color: #a7a7a7;
     font-size: 1em;
+    width: 90%;
 }
 
 @media screen and (max-width: 900px) {
@@ -176,6 +196,22 @@ p {
 
     .hero {
         flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+        font-size: 2em;
+    }
+
+    h4 {
+        font-size: 1.7em;
+    }
+
+    p {
+        font-size: 0.9em;
     }
 }
 
